--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="shortcut icon" href="https://yt3.ggpht.com/-RnDCi_3GfZ8/AAAAAAAAAAI/AAAAAAAAAAA/caQpG8xP_GY/s240-c-k-no-mo-rj-c0xffffff/photo.jpg" type="image/x-icon">
-	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </head>
 <body>
